services/garage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
  labels:
    app.kubernetes.io/name: garage
spec:
  type: ClusterIP
  ports:
    - name: s3-api
      port: 3900
      targetPort: s3-api
      protocol: TCP
    - name: admin
      port: 3903
      targetPort: admin
      protocol: TCP
  selector:
    app.kubernetes.io/name: garage
